<resources>
    <string name="app_name">Call 911</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="settings">Settings</string>

    <string name="first_name">First Name</string>
    <string name="phone">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="get_request">Get request</string>
    <string name="tab_fire_list">List</string>
    <string name="tab_fire_my_account">My Account</string>

    <string name="comming_soon">Comming Soon</string>
    <string name="empty_data">You need to put a correct credentials info</string>
    <string name="invalide_login_data">Invalide login data</string>

    <string name="first_fragment_label">Call 911</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="post_request">Post Request</string>
    <string name="logout">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_alert_fire">Alert Fire</string>
</resources>